--- a/package.json
+++ b/package.json
@@ -19,13 +19,12 @@
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^15.15.0",
     "parcel": "^2.14.4",
+    "react-router-dom": "^7.5.0",
     "vite": "^6.2.5"
   },
   "dependencies": {
-    "@tailwindcss/cli": "^4.1.3",
     "node": "^18.20.8",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "tailwindcss": "^4.1.3"
+    "react-dom": "^18.3.1"
   }
 }
