--- a/package.json
+++ b/package.json
@@ -14,15 +14,19 @@
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
     "@vitejs/plugin-react": "^4.3.4",
+    "autoprefixer": "^10.4.21",
     "eslint": "^9.21.0",
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^15.15.0",
     "parcel": "^2.14.4",
+    "postcss": "^8.5.3",
     "react-router-dom": "^7.5.0",
+    "tailwindcss": "^4.1.3",
     "vite": "^6.2.5"
   },
   "dependencies": {
+    "@tailwindcss/vite": "^4.1.3",
     "node": "^18.20.8",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
